erDiagram
%% @config(./config.json)
    Customer ||--o{ Order : places
    Customer {
        uuid id PK
        string name
        string firstName
        string lastName
        string profile
        jsonb address
    }
    Order ||--o{ Line-Item : contains
    Order {
        uuid id PK
        jsonb shippingAddress FK
    }
    Line-Item ||--|| Product : contains
    Line-Item {
        uuid id PK
        uuid productId FK
        int quantity
        float pricePerUnit
    }
    Product {
        uuid id PK
        string name
        int stock
        float pricePerUnit
    }
    Customer ||--o{ Salvaged-Device : salvages
    Salvaged-Device {
        uuid id PK
        string name
        string brand
        bool isWorking
        string storage
        int memory
        string status
    }
    Customer ||--o{ Notification : has
    Admin ||--o{ Notification : creates
    Notification {
        uuid id
        string title
        string body
    }
    Admin only one to zero or more Product : Creates
